# npapi-vlc

./: configure.ac
extras/macosx/: Pre-Compile.sh
npapi/: Makefile.am  vlcplugin_base.cpp  vlcplugin_base.h  vlcplugin_layer.m  vlcplugin_mac.cpp  vlcplugin_mac.h  vlcshell.cpp
npapi/macosx/: Makefile.am  misc.h  misc.m  vlcplugin_layer.h  vlcplugin_layer.m
npapi/macosx/plugins/: Makefile.am  caopengl.c  caopengl.h  caopengl_vout.m
npapi/macosx_vout/: Makefile.am
npapi/support/: npmac.cpp
